WIP: conditional execution ported M68K and MIPS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(CMAKE_BUILD_TYPE "Debug")
 #
 # Add here the architecture you want to support.
 # 
-SET(GUEST_ARCHITECTURES 6502 arm)
+SET(GUEST_ARCHITECTURES 6502 arm m68k mips)
 #SET(GUEST_ARCHITECTURES 6502 m68k m88k mips arm)
 #IF(APPLE)
 #  SET(GUEST_EXTRA_TESTS next68k)
