Assume that LLVM is installed in C:\Program Files\LLVM for MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ INCLUDE(CMake/FindLLVM.cmake)
 #
 #
 INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIR} ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/libcpu)
+LINK_DIRECTORIES(${LLVM_LIB_DIR})
 # Add LLVM flags only to C++.
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LLVM_COMPILE_FLAGS}")
 
