Don't try to build libnix and run_m88k on MSVC (for now)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,5 +77,7 @@ FOREACH(TEST ${GUEST_EXTRA_TESTS})
 ENDFOREACH()
 
 ADD_SUBDIRECTORY(libcpu)
-ADD_SUBDIRECTORY(test/libnix)
+IF(NOT MSVC)
+  ADD_SUBDIRECTORY(test/libnix)
+ENDIF()
 
