--- a/libcpu/CMakeLists.txt
+++ b/libcpu/CMakeLists.txt
@@ -17,5 +17,9 @@ ADD_LIBRARY(cpu SHARED
 			sha1.cpp
 			interface.cpp)
 
-TARGET_LINK_LIBRARIES(cpu ${GUEST_ARCHITECTURES_ENABLED} readline)
+TARGET_LINK_LIBRARIES(cpu ${GUEST_ARCHITECTURES_ENABLED})
+if (HAVE_LIBREADLINE)
+	ADD_DEFINITIONS(-DUSE_READLINE)
+	TARGET_LINK_LIBRARIES(cpu readline)
+endif()
 TARGET_LINK_LLVM(cpu)
