Put all binaries in one directory (so the .exe files can find the .dll)

--- a/test/m88k/CMakeLists.txt
+++ b/test/m88k/CMakeLists.txt
@@ -1,5 +1,6 @@
 PROJECT(test_m88k)
 
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${LIBCPU_RUNTIME_OUTPUT_DIRECTORY})
 ADD_EXECUTABLE(test_m88k main.cpp)
 TARGET_LINK_LIBRARIES(test_m88k cpu)
 
