Only pull in LLVM link references when building cpu.so / cpu.dll

--- a/libcpu/CMakeLists.txt
+++ b/libcpu/CMakeLists.txt
@@ -17,6 +17,7 @@ ADD_LIBRARY(cpu SHARED
 			sha1.cpp
 			interface.cpp)
 
+ADD_DEFINITIONS(-DLIBCPU_BUILD_CORE)
 TARGET_LINK_LIBRARIES(cpu ${GUEST_ARCHITECTURES_ENABLED})
 if (HAVE_LIBREADLINE)
 	ADD_DEFINITIONS(-DUSE_READLINE)
