Port LLVM to 3.1/trunk
Changes needed for 3.1:

	o LLVM now build by default llvm-config with
	  '-pedantic'. This creates issue to ou
	  "relaxed" coding style.
	  It has been alleviated by compilin for C++0x
	  standard, but some changes are needed:

	  1. No more anonymous structs (anonymous unions are ok)
	  2. Be careful consts and types.
	  3. No more comma-at-end array definitions

	  #1 brought me to disable x86. It is not really useful
	  at the time, thus fixing it wouldn't have added any
	  additional value to libcpu.

	o LLVM 3.0 has a new type system so addTypeName is gone.

	o In LLVM 3.1 ctlz and cttz have another boolean argument.
	  Also, current API seems to be in favour of the ArrayRef.

	o Other minor changes I probably forgot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(CMAKE_BUILD_TYPE "Debug")
 #
 # Add here the architecture you want to support.
 # 
-SET(GUEST_ARCHITECTURES 6502 m68k m88k mips arm x86 fapra)
+SET(GUEST_ARCHITECTURES 6502 m68k m88k mips arm fapra)
 SET(GUEST_EXTRA_TESTS multi)
 IF(APPLE)
   SET(GUEST_EXTRA_TESTS ${GUEST_EXTRA_TESTS} next68k)
@@ -73,6 +73,8 @@ ENDMACRO(TARGET_LINK_LLVM)
 #
 IF(CMAKE_COMPILER_IS_GNUCXX)
   ADD_DEFINITIONS(-W -Wall -Wextra -Wno-unused -Werror -D__STDC_FORMAT_MACROS=1)
+  # Set standard to C++11 or whatever
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 ENDIF()
 
 FOREACH(ARCHITECTURE ${GUEST_ARCHITECTURES})
