--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,9 +73,11 @@ ENDMACRO(TARGET_LINK_LLVM)
 #
 IF(CMAKE_COMPILER_IS_GNUCXX)
   ADD_DEFINITIONS(-W -Wall -Wextra -Wno-unused -Werror -D__STDC_FORMAT_MACROS=1)
-  # Set standard to C++11 or whatever
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 ENDIF()
+
+# Set standard to C++11 or whatever
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -stdlib=libc++")
+SET(CMAKE_CC_FLAGS "${CMAKE_CC_FLAGS} -std=c++0x -stdlib=libc++")
 
 #
 # llvm-config may set up -pedantic. Remove for the sake of sanity.
