Workaround cmake bug
Note! The compiler can not be changed after the first cmake or ccmake run.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,10 @@ PROJECT(libcpu)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-
-IF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-  SET(CMAKE_CXX_COMPILER	"clang++")
-  SET(CMAKE_C_COMPILER		"clang")
-  SET(CMAKE_CXX_COMPILER	"true")
-ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-
+#IF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+#  SET(CMAKE_CXX_COMPILER	"/usr/local/bin/clang++")
+#  SET(CMAKE_C_COMPILER		"/usr/local/bin/clang")
+#ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 
 INCLUDE(FindThreads)
 
