--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: c++
 compiler:
   - gcc
 before_install:
-  - sudo apt-get install -qq apt-get install flex bison libreadline-dev llvm-dev
+  - sudo apt-get install -qq flex bison libreadline-dev llvm-dev
 script: make
