--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: c++
 compiler:
   - gcc
 before_install:
-  - sudo apt-get install -qq flex bison libreadline-dev llvm-dev
+  - sudo sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise main' >> /etc/apt/sources.list"
+  - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq llvm-3.3-dev
+  - sudo apt-get install -qq flex bison libreadline-dev
 script: make
