Use PPA for LLVM 3.3 packages
Use Niko Mikkilä's PPA LLVM 3.3 packages to build libcpu.

Signed-off-by: Pekka Enberg <penberg@iki.fi>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: c++
 compiler:
   - gcc
-before_install:
-  - sudo sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise main' >> /etc/apt/sources.list"
-  - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
+install:
+  - echo yes | sudo add-apt-repository ppa:nmi/llvm-3.3
   - sudo apt-get update -qq
   - sudo apt-get install -qq llvm-3.3-dev
   - sudo apt-get install -qq flex bison libreadline-dev
